syntax = "proto3";
package yanagi.resources;

import "google/protobuf/timestamp.proto";

message Job {
  uint32 pid = 1;
  uint32 tid = 2;
  google.protobuf.Timestamp start_time = 3;
  google.protobuf.Timestamp end_time = 4;
  string channel_name = 5;
  uint32 channel_for_syoboi = 6;
  uint32 channel_for_recorder = 7;
  string count = 8;
  int32 start_offset = 9;
  string subtitle = 10;
  string title = 11;
  string comment = 12;
  google.protobuf.Timestamp enqueued_at = 13;
}
